--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,10 +4,33 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+
+
+    <%= f.input :first_name, label: "Nome",
+                required: true,
+                input_html: { autocomplete: "given-name" } %>
+    <%= f.input :last_name, label: "Sobrenome",
+                required: true,
+                input_html: { autocomplete: "family-name" } %>
+    <%= f.input :birthday, label: "Data de nascimento",
+                as: :date,
+                required: true %>
+    <%= f.input :gender, label: "Gênero",
+                as: :select,
+                collection: [['Male', 'male'], ['Female', 'female'], ['Other', 'other']],
+                required: true %>
+    <%= f.input :phone, label: "Celular",
+                required: false,
+                input_html: { autocomplete: "tel" } %>
+    <%= f.input :user_image, label: "Foto de perfil",
+                as: :file,
+                required: false %>
+
+
     <%= f.input :email,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                input_html: { autocomplete: "email" } %>
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
@@ -15,6 +38,16 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+
+
+
+
+
+
+
+
+
+
   </div>
 
   <div class="form-actions">
