video de banner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<section class="home-page">
+  <div class="video-background">
+    <video autoplay loop muted>
+      <source src="https://res.cloudinary.com/dhkyacden/video/upload/v1733169453/imymanrc3gbtbql0uaoz.mp4" type="video/mp4">
+      Seu navegador não suporta a tag de vídeo.
+    </video>
+  </div>
+  <div class="overlay"></div>
+  <div class="content">
+    <h1>Melhores academias e parceiros de bem-estar em um só benefício</h1>
+  </div>
+</section>
