--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -21,7 +21,7 @@
 
             <% if user_signed_in? %>
             <!-- Ícone para "Minha Conta" -->
-            <%= link_to my_account_path(current_user), class: "footer-link" do %>
+            <%= link_to "#", class: "footer-link" do %>
               <%= image_tag "https://kitt.lewagon.com/placeholder/users/arthur-littm", alt: "Minha Conta", class: "footer-icon perfil-img" %>
               <span>Perfil</span>
             <% end %>
