--- a/app/views/gyms/index.html.erb
+++ b/app/views/gyms/index.html.erb
@@ -1,6 +1,9 @@
 <div class="container">
   <h1>Academias</h1>
 
+  <%# Busca da academia %>
+  <%= render "shared/search" %>
+
   <% @gyms.each do |gym| %>
     <div class="card mb-3 rounded-4" style="max-width: 400px;">
       <div class="row g-0 align-items-center">
@@ -11,7 +14,7 @@
         </div>
         <div class="col-md-8 w-auto">
           <div class="card-body">
-          <%= link_to gym.name ,gym_path(gym), class: "card-title text-decoration-none" %>
+            <%= link_to gym.name, gym_path(gym), class: "card-title text-decoration-none" %>
             <p class="card-text mb-1">Score: <%= gym.rating %></p>
             <p class="card-text mb-1"><small class="text-body-secondary">Fluxo: <%= @fluxos[gym.id] %></small></p>
             <p class="card-text mb-1"><small class="text-body-secondary">Capacidade: <%= gym.capacity %></small></p>
