--- a/app/views/gyms/index.html.erb
+++ b/app/views/gyms/index.html.erb
@@ -4,6 +4,7 @@
   <%# Busca da academia %>
   <%= render "shared/search" %>
 
+  <%= render "shared/filter" %>
   <% @gyms.each do |gym| %>
     <div class="card mb-3 rounded-4" style="max-width: 400px;">
       <div class="row g-0 align-items-center">
