--- a/app/assets/stylesheets/pages/_show_gyms.scss
+++ b/app/assets/stylesheets/pages/_show_gyms.scss
@@ -1,3 +1,15 @@
 .img-gym {
-  max-width: 300px;
+  max-height: 300px;
+  max-width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  object-fit: cover;
+}
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.comodidades {
+  background-color: #d3d3d3;
 }
