--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container container-new-form">
   <div class="text-center">
     <h1 class="mb-4 fs-4 fw-bold"><%= @gym.name %></h1>
-    <ul class="p-0">
-      <% @images.take(4).each do |image| %>
+    <ul class="p-0 d-flex justify-content-center gap-3">
+      <% @images.each do |image| %>
         <li><%= image_tag(image, class: "img-checkin") %></li>
       <% end %>
     </ul>
@@ -20,27 +20,29 @@
     <%= f.hidden_field :checkin_hour, value: Time.current %>
     <%= f.submit "Check-in", class: "btn btn-danger text-light rounded-4 w-100" %>
   <% end %>
-  <div id="carouselExample" class="carousel slide mt-4">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <%= image_tag(@gym.images, class: "img-gym rounded-4") %>
+  <% if @gym.images.present? %>
+    <div id="carouselExample" class="carousel slide mt-4">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <%= image_tag(@gym.images, class: "img-gym rounded-4") %>
+        </div>
+        <div class="carousel-item">
+          <%= image_tag(@gym.images, class: "img-gym rounded-4") %>
+        </div>
+        <div class="carousel-item">
+          <%= image_tag(@gym.images, class: "img-gym rounded-4") %>
+        </div>
       </div>
-      <div class="carousel-item">
-        <%= image_tag(@gym.images, class: "img-gym rounded-4") %>
-      </div>
-      <div class="carousel-item">
-        <%= image_tag(@gym.images, class: "img-gym rounded-4") %>
-      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+  <% end %>
   <div class="mt-4 p-4 rounded-4 comodidades">
     <h6 class="fw-bold">O local oferece:</h6>
     <ul class="p-1 row">
