--- a/app/assets/stylesheets/pages/_footer.scss
+++ b/app/assets/stylesheets/pages/_footer.scss
@@ -1,13 +1,17 @@
 footer {
   bottom: 0;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: #000000;
   color: white;
   justify-content: space-around;
   align-items: center;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
-  position: fixed;
+  position: relative;
+  z-index: 10;
+  text-align: center;
+  padding: 10px 0;
 }
+
 
 .footer-content {
   display: flex;
