--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,6 +3,8 @@
   padding: 0;
   overflow: hidden;
   font-family: Arial, sans-serif;
+  position: relative;
+  height: 92vh;
 }
 
 .home-page .video-background {
@@ -27,6 +29,7 @@
   text-align: center;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 0 20px;
@@ -49,9 +52,39 @@
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
 }
 
-footer {
-  z-index: 10;
+.banner-container {
+  position: absolute;
+  bottom: 10%;
+  width: 100%;
+  text-align: center;
+  z-index: 2;
+  opacity: 0.5;
 }
+
+.home-page .banner {
+  display: inline-block;
+  padding: 10px;
+  border-radius: 10px;
+  text-decoration: none;
+  color: white;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.home-page .banner a {
+  text-decoration: none;
+  color: white;
+}
+
+.home-page .banner a:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  color: #ffcc00;
+}
+
+.home-page .banner img {
+  max-width: 50%;
+  height: auto;
+}
+
 
 @media (max-width: 768px) {
   .home-page h1 {
@@ -60,8 +93,18 @@ footer {
 }
 
 @media (max-width: 480px) {
+  .home-page{
+    height: 82vh;
+  }
   .home-page h1 {
     font-size: 1.5rem;
     line-height: 1.3;
+  }
+  .banner-container {
+    width: 100%;
+  }
+  .home-page .banner img {
+    max-width: 100%;
+    height: auto;
   }
 }
