--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -22,7 +22,11 @@
             <% if user_signed_in? %>
             <!-- Ícone para "Minha Conta" -->
             <%= link_to my_account_path(current_user), class: "footer-link" do %>
+            <% if current_user.profile_picture.nil? %>
               <%= image_tag current_user.profile_picture, alt: "Minha Conta", class: "footer-icon perfil-img" %>
+            <% else %>
+              <%= image_tag "user.svg", alt: "Profile user", class: "footer-icon" %>
+            <% end %>
               <span>Perfil</span>
             <% end %>
           <% else %>
