--- a/app/views/users/my_account.html.erb
+++ b/app/views/users/my_account.html.erb
@@ -1,6 +1,8 @@
 <div class="minha-conta">
   <div class="info-usuario">
-  <%= image_tag current_user.profile_picture, alt: "Imagem de Perfil", class: "footer-icon perfil-img" %>
+    <% if current_user.profile_picture.exists? %>
+      <%= image_tag current_user.profile_picture, alt: "Imagem de Perfil", class: "footer-icon perfil-img" %>
+  <% end %>
     <h2>Nome: <%= current_user.first_name %> <%= current_user.last_name %></h2>
     <p>Peso: <%#= current_user.weight %> kg</p>
     <p>Altura: <%#= current_user.height %> cm</p>
