--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -1,10 +1,13 @@
 <div class="container container-new-form">
-  <div class="text-center">
+  <div class="text-center mt-4">
     <h1 class="mb-4 fs-4 fw-bold"><%= @gym.name %></h1>
     <ul class="p-0 d-flex justify-content-center gap-3">
+    <% if @images.any? %>
+
       <% @images.each do |image| %>
         <li><%= image_tag(image, class: "img-checkin") %></li>
       <% end %>
+    <% end %>
     </ul>
     <p class="mt-3 fw-bold">Alunos onGym</p>
     <div class="d-flex justify-content-center gap-3">
