foto perfil do footer corrigida

--- a/app/views/users/my_account.html.erb
+++ b/app/views/users/my_account.html.erb
@@ -1,6 +1,6 @@
 <div class="minha-conta">
   <div class="info-usuario">
-    <% if current_user.profile_picture.exists? %>
+    <% if current_user.profile_picture %>
       <%= image_tag current_user.profile_picture, alt: "Imagem de Perfil", class: "footer-icon perfil-img" %>
   <% end %>
     <h2>Nome: <%= current_user.first_name %> <%= current_user.last_name %></h2>
