--- a/app/assets/stylesheets/pages/_show_gyms.scss
+++ b/app/assets/stylesheets/pages/_show_gyms.scss
@@ -13,3 +13,9 @@
 .comodidades {
   background-color: #d3d3d3;
 }
+.qtd-alunos {
+  width: 40px;
+  height: 40px;
+  background-color: #d3d3d3;
+  border-radius: 50%;
+}
