--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -1,12 +1,17 @@
+<%= javascript_include_tag 'carousel', 'data-turbo-track': 'reload', defer: true %>
+<%= javascript_include_tag 'alunos', 'data-turbo-track': 'reload', defer: true %>
 <div class="container container-new-form">
+
   <div class="text-center mt-4">
     <h1 class="mb-4 fs-4 fw-bold"><%= @gym.name %></h1>
-    <ul class="p-0 d-flex justify-content-center gap-3">
+    <ul class="p-0 d-flex justify-content-center gap-1">
     <% if @images.any? %>
-
       <% @images.each do |image| %>
-        <li><%= image_tag(image, class: "img-checkin") %></li>
+        <% if image %>
+          <li><%= image_tag(image, class: "img-checkin") %></li>
+        <% end %>
       <% end %>
+      <li><p class="qtd-alunos d-flex align-items-center justify-content-center d-none">+ <%= @qtd_alunos %></p></li>
     <% end %>
     </ul>
     <p class="mt-3 fw-bold">Alunos onGym</p>
@@ -25,16 +30,12 @@
   <% end %>
   <% if @gym.images.present? %>
     <div id="carouselExample" class="carousel slide mt-4">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <%= image_tag(@gym.images, class: "img-gym rounded-4") %>
-        </div>
+      <div class="carousel-inner lista-carousel">
+      <% @gym.images.each do |image| %>
         <div class="carousel-item">
-          <%= image_tag(@gym.images, class: "img-gym rounded-4") %>
+          <%= image_tag(image, class: "img-gym rounded-4") %>
         </div>
-        <div class="carousel-item">
-          <%= image_tag(@gym.images, class: "img-gym rounded-4") %>
-        </div>
+      <% end %>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -54,4 +55,5 @@
       <% end %>
     </ul>
   </div>
+
 </div>
