--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,17 @@
 <h1>Editar Perfil</h1>
 
 <%= form_with model: current_user, url: user_path(current_user), method: :patch, local: true, html: { multipart: true } do |form| %>
+
+  <div>
+    <%= form.label :first_name, "Nome" %>
+    <%= form.text_field :first_name, value: current_user.first_name %>
+  </div>
+
+  <div>
+     <%= form.label :last_name, "Sobrenome" %>
+    <%= form.text_field :last_name, value: current_user.last_name %>
+  </div>
+
   <div>
     <%= form.label :profile_picture, "Foto de Perfil" %>
     <%= form.file_field :profile_picture %>
@@ -16,4 +27,7 @@
   <div>
     <%= form.submit "Atualizar Perfil" %>
   </div>
+
+
+  
 <% end %>
