--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,21 +1,4 @@
-<h1>Editar Perfil</h1>
-
-<%= form_with model: current_user, url: user_path(current_user), method: :patch, local: true, html: { multipart: true } do |form| %>
-
-  <div>
-    <%= form.label :first_name, "Nome" %>
-    <%= form.text_field :first_name, value: current_user.first_name %>
-  </div>
-
-  <div>
-     <%= form.label :last_name, "Sobrenome" %>
-    <%= form.text_field :last_name, value: current_user.last_name %>
-  </div>
-
-  <div>
-    <%= form.label :profile_picture, "Foto de Perfil" %>
-    <%= form.file_field :profile_picture %>
-  </div>
+<%= form_with model: current_user, url: user_path(current_user), method: :patch, local: true, html: { multipart: true, class: "edit-profile-form" } do |form| %>
 
   <% if current_user.profile_picture.attached? %>
     <div>
@@ -25,9 +8,23 @@
   <% end %>
 
   <div>
+    <%= form.label :profile_picture, "Foto de Perfil" %>
+    <%= form.file_field :profile_picture, class: "upload-input" %>
+    <label for="user_profile_picture" class="upload-btn">Selecionar Foto</label>
+  </div>
+
+  <div>
+    <%= form.label :first_name, "Nome" %>
+    <%= form.text_field :first_name, value: current_user.first_name %>
+  </div>
+
+  <div>
+    <%= form.label :last_name, "Sobrenome" %>
+    <%= form.text_field :last_name, value: current_user.last_name %>
+  </div>
+
+  <div>
     <%= form.submit "Atualizar Perfil" %>
   </div>
 
-
-  
 <% end %>
