--- a/app/views/users/my_account.html.erb
+++ b/app/views/users/my_account.html.erb
@@ -1,16 +1,14 @@
 <div class="minha-conta">
   <div class="info-usuario">
     <% if current_user.profile_picture %>
-      <%= image_tag current_user.profile_picture, alt: "Imagem de Perfil", class: "footer-icon perfil-img" %>
-  <% end %>
+    
+      <%= image_tag current_user.profile_picture, alt: "Imagem de Perfil", width: 150, height: 150 %>
+    <% end %>
     <h2>Nome: <%= current_user.first_name %> <%= current_user.last_name %></h2>
     <p><strong>Idade:</strong> <%= current_user.age ? "#{current_user.age} anos" : "Data de nascimento não informada" %></p>
     <p>Peso: <%#= current_user.weight %> </p>
     <p>Altura: <%#= current_user.height %> </p>
   </div>
-
-
-
 
   <div class="opcoes-conta">
     <a href="<%= profile_path %>" class="botao-editar">Editar Perfil</a>
