--- a/app/views/gyms/index.html.erb
+++ b/app/views/gyms/index.html.erb
@@ -1,31 +1,43 @@
 <div class="container">
   <h1>Academias</h1>
 
-  <%# Busca da academia %>
-  <%= render "shared/search" %>
+  <div class="search-container">
+    <%# Busca da academia %>
+    <div class="search-bar-index">
+      <%= render "shared/search" %>
+    </div>
 
-  <%= render "shared/filter" %>
-  <% @gyms.each do |gym| %>
-    <div class="card mb-3 rounded-4" style="max-width: 400px;">
-      <div class="row g-0 align-items-center">
-        <div class="col-md-4 w-auto">
-          <%= link_to gym_path(gym), class: "card-title text-decoration-none" do %>
-            <%= image_tag "growth-logo-or.png", class: "card-img" %>
-          <% end %>
-        </div>
-        <div class="col-md-8 w-auto">
-          <div class="card-body">
-            <%= link_to gym.name, gym_path(gym), class: "card-title text-decoration-none" %>
-            <p class="card-text mb-1">Score: <%= gym.rating %></p>
-            <p class="card-text mb-1"><small class="text-body-secondary">Fluxo: <%= @fluxos[gym.id] %></small></p>
-            <p class="card-text mb-1"><small class="text-body-secondary">Capacidade: <%= gym.capacity %></small></p>
-            <div class="d-flex gap-3">
-              <p class="card-text mb-1"><small class="text-body-secondary">Mulheres: <%= @gender[gym.id]["Female"] %></small></p>
-              <p class="card-text mb-1"><small class="text-body-secondary">Homens: <%= @gender[gym.id]["Male"] %></small></p>
+    <div id="botoes-index" class="d-flex justify-content-between align-items-center mb-3">
+      <%= render "shared/filter" %>
+      <div id="botao-index-map"class="button-group d-flex gap-2">
+        <%= link_to 'Ver mapa', map_path, class: 'btn btn-primary view-map-button' %>
+      </div>
+    </div>
+  </div>
+
+  <div class="gyms-container">
+    <% @gyms.each do |gym| %>
+      <div class="card mb-3 rounded-4">
+        <div class="row g-0 align-items-center">
+          <div class="col-md-4 w-auto">
+            <%= link_to gym_path(gym), class: "card-title text-decoration-none" do %>
+              <%= image_tag "growth-logo-or.png", class: "card-img" %>
+            <% end %>
+          </div>
+          <div class="col-md-8 w-auto">
+            <div class="card-body">
+              <%= link_to gym.name, gym_path(gym), class: "card-title text-decoration-none" %>
+              <p class="card-text mb-1">Score: <%= gym.rating %></p>
+              <p class="card-text mb-1"><small class="text-body-secondary">Fluxo: <%= @fluxos[gym.id] %></small></p>
+              <p class="card-text mb-1"><small class="text-body-secondary">Capacidade: <%= gym.capacity %></small></p>
+              <div class="d-flex gap-3">
+                <p class="card-text mb-1"><small class="text-body-secondary">Mulheres: <%= @gender[gym.id]["Female"] %></small></p>
+                <p class="card-text mb-1"><small class="text-body-secondary">Homens: <%= @gender[gym.id]["Male"] %></small></p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
