--- a/app/views/gyms/map.html.erb
+++ b/app/views/gyms/map.html.erb
@@ -1,4 +1,5 @@
-<div class="container mt-3">
+<div class="container mt-1">
+  <h3>Mapa Academias</h3>
   <div class="search-bar">
     <input type="text" id="search" name="search" placeholder="Escreva o nome da academia" value="<%= params[:query] %>">
     <button id="search-button" class="btn btn-danger">Busca</button>
