--- a/app/assets/stylesheets/pages/_footer.scss
+++ b/app/assets/stylesheets/pages/_footer.scss
@@ -1,17 +1,18 @@
 footer {
   bottom: 0;
+  left: 0;
+  right: 0;
   width: 100%;
   background-color: #000000;
   color: white;
   justify-content: space-around;
   align-items: center;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
-  position: relative;
+  position: fixed;
   z-index: 10;
   text-align: center;
   padding: 10px 0;
 }
-
 
 .footer-content {
   display: flex;
