--- a/app/views/gyms/index.html.erb
+++ b/app/views/gyms/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container mt-1">
-  <h3>Lista Academias</h3>
+<div class="container mt-4">
+  <h3 class="text-center mt-4 mb-4">Lista Academias</h3>
 
   <div class="search-container">
     <%# Busca da academia %>
