--- a/app/views/gyms/index.html.erb
+++ b/app/views/gyms/index.html.erb
@@ -17,29 +17,32 @@
 
   <%= render "shared/filter" %>
 
-  <div class="gyms-container">
-    <% @gyms.each do |gym| %>
-      <div class="card mb-3 rounded-4">
-        <div class="row g-0 align-items-center">
-          <div class="col-md-4 w-auto">
-            <%= link_to gym_path(gym), class: "card-title text-decoration-none" do %>
-              <%= image_tag "growth-logo-or.png", class: "card-img" %>
-            <% end %>
-          </div>
-          <div class="col-md-8 w-auto">
-            <div class="card-body">
-              <%= link_to gym.name, gym_path(gym), class: "card-title text-decoration-none" %>
-              <p class="card-text mb-1">Score: <%= gym.rating %></p>
-              <p class="card-text mb-1"><small class="text-body-secondary">Fluxo: <%= @fluxos[gym.id] %></small></p>
-              <p class="card-text mb-1"><small class="text-body-secondary">Capacidade: <%= gym.capacity %></small></p>
-              <div class="d-flex gap-3">
-                <p class="card-text mb-1"><small class="text-body-secondary">Mulheres: <%= @gender[gym.id]["Female"] %></small></p>
-                <p class="card-text mb-1"><small class="text-body-secondary">Homens: <%= @gender[gym.id]["Male"] %></small></p>
-              </div>
+<div class="gyms-container">
+  <% @gyms.each do |gym| %>
+    <div class="card mb-3 rounded-4">
+      <div class="row g-0 align-items-center">
+        <div class="col-md-4 w-auto">
+          <%= link_to gym_path(gym), class: "card-title text-decoration-none" do %>
+            <%= image_tag "growth-logo-or.png", class: "card-img" %>
+          <% end %>
+        </div>
+        <div class="col-md-8 w-auto">
+          <div class="card-body">
+            <%= link_to gym.name, gym_path(gym), class: "card-title text-decoration-none" %>
+            <p class="card-text mb-1">Score: <%= gym.rating %></p>
+            <p class="card-text mb-1"><small class="text-body-secondary">Fluxo: <span id="fluxo-<%= gym.id %>"><%= @fluxos[gym.id] %></span></small></p>
+            <p class="card-text mb-1"><small class="text-body-secondary">Capacidade: <%= gym.capacity %></small></p>
+            <div class="d-flex gap-3">
+              <p class="card-text mb-1"><small class="text-body-secondary">Mulheres: <%= @gender[gym.id]["Female"] %></small></p>
+              <p class="card-text mb-1"><small class="text-body-secondary">Homens: <%= @gender[gym.id]["Male"] %></small></p>
             </div>
           </div>
         </div>
       </div>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
 </div>
+
+<script>
+
+</script>
